--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ task fatJar(type: Jar) {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = "3.2";
+	gradleVersion = "3.2"
 }
 
 dependencies {
@@ -69,7 +69,12 @@ dependencies {
 	compile('com.h2database:h2')
 	compile('org.postgresql:postgresql')
 	compile 'org.mapstruct:mapstruct:1.1.0.Final'
-    compileOnly('org.projectlombok:lombok')
+	compile ("io.springfox:springfox-swagger2:2.7.0") {
+		exclude module: 'mapstruct'
+	}
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+
+
 	compile "com.fasterxml.jackson.datatype:jackson-datatype-json-org"
 	compile "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
 	compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
