--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 	compile ("io.springfox:springfox-swagger2:2.7.0") {
 		exclude module: 'mapstruct'
 	}
+	compile "io.jsonwebtoken:jjwt:0.7.0"
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 
 
