--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -4,6 +4,13 @@ server:
 spring:
     profiles:
         active: dev
+
+    devtools:
+        restart:
+            enabled: true
+        livereload:
+            enabled: true
+
     datasource:
         dataSourceClassName: org.h2.jdbcx.JdbcDataSource
         url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
@@ -24,9 +31,6 @@ spring:
               show_sql: true
               use_sql_comments: true
               format_sql: true
-
-    data:
-        jpa.repositories.enabled: true
 
     h2:
         console:
