--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 	compile ("io.springfox:springfox-swagger2:2.7.0") {
 		exclude module: 'mapstruct'
 	}
+	compile ("io.springfox:springfox-swagger-ui:2.7.0")
 
 	compile "io.jsonwebtoken:jjwt:${jjwt_version}"
 	compile "org.apache.commons:commons-lang3:${apache_commons}"
