--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,8 +1,6 @@
 spring:
-
     application:
         name: taskPlanner
-
     profiles:
         active: dev
 
@@ -10,7 +8,7 @@ spring:
         jpa.repositories.enabled: true
 
 logging:
-    file: app.log
+    file: ${java.io.tmpdir}/application.log
     level:
         root: INFO
         org.springframework.web: INFO
